; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_resource.c_get_background_proc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_resource.c_get_background_proc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32 }

@EPERM = common dso_local global i32 0, align 4
@TASK_POLICY_INTERNAL = common dso_local global i32 0, align 4
@TASK_POLICY_EXTERNAL = common dso_local global i32 0, align 4
@TASK_POLICY_DARWIN_BG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.proc*, %struct.proc*, i32*)* @get_background_proc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_background_proc(%struct.proc* %0, %struct.proc* %1, i32* %2) #0 {
  %4 = alloca %struct.proc*, align 8
  %5 = alloca %struct.proc*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.proc* %0, %struct.proc** %4, align 8
  store %struct.proc* %1, %struct.proc** %5, align 8
  store i32* %2, i32** %6, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %8, align 4
  %11 = call i32 (...) @kauth_cred_get()
  store i32 %11, i32* %9, align 4
  %12 = load %struct.proc*, %struct.proc** %5, align 8
  %13 = call i32 @kauth_cred_proc_ref(%struct.proc* %12)
  store i32 %13, i32* %10, align 4
  %14 = load i32, i32* %9, align 4
  %15 = call i32 @kauth_cred_issuser(i32 %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %35, label %17

17:                                               ; preds = %3
  %18 = load i32, i32* %9, align 4
  %19 = call i64 @kauth_cred_getruid(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %35

21:                                               ; preds = %17
  %22 = load i32, i32* %9, align 4
  %23 = call i64 @kauth_cred_getuid(i32 %22)
  %24 = load i32, i32* %10, align 4
  %25 = call i64 @kauth_cred_getuid(i32 %24)
  %26 = icmp ne i64 %23, %25
  br i1 %26, label %27, label %35

27:                                               ; preds = %21
  %28 = load i32, i32* %9, align 4
  %29 = call i64 @kauth_cred_getruid(i32 %28)
  %30 = load i32, i32* %10, align 4
  %31 = call i64 @kauth_cred_getuid(i32 %30)
  %32 = icmp ne i64 %29, %31
  br i1 %32, label %33, label %35

33:                                               ; preds = %27
  %34 = load i32, i32* @EPERM, align 4
  store i32 %34, i32* %8, align 4
  br label %50

35:                                               ; preds = %27, %21, %17, %3
  %36 = load %struct.proc*, %struct.proc** %4, align 8
  %37 = load %struct.proc*, %struct.proc** %5, align 8
  %38 = icmp eq %struct.proc* %36, %37
  br i1 %38, label %39, label %41

39:                                               ; preds = %35
  %40 = load i32, i32* @TASK_POLICY_INTERNAL, align 4
  br label %43

41:                                               ; preds = %35
  %42 = load i32, i32* @TASK_POLICY_EXTERNAL, align 4
  br label %43

43:                                               ; preds = %41, %39
  %44 = phi i32 [ %40, %39 ], [ %42, %41 ]
  store i32 %44, i32* %7, align 4
  %45 = call i32 (...) @current_task()
  %46 = load i32, i32* %7, align 4
  %47 = load i32, i32* @TASK_POLICY_DARWIN_BG, align 4
  %48 = call i32 @proc_get_task_policy(i32 %45, i32 %46, i32 %47)
  %49 = load i32*, i32** %6, align 8
  store i32 %48, i32* %49, align 4
  br label %50

50:                                               ; preds = %43, %33
  %51 = call i32 @kauth_cred_unref(i32* %10)
  %52 = load i32, i32* %8, align 4
  ret i32 %52
}

declare dso_local i32 @kauth_cred_get(...) #1

declare dso_local i32 @kauth_cred_proc_ref(%struct.proc*) #1

declare dso_local i32 @kauth_cred_issuser(i32) #1

declare dso_local i64 @kauth_cred_getruid(i32) #1

declare dso_local i64 @kauth_cred_getuid(i32) #1

declare dso_local i32 @proc_get_task_policy(i32, i32, i32) #1

declare dso_local i32 @current_task(...) #1

declare dso_local i32 @kauth_cred_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
